Resolves: fdo#66924 switching to master view is broken

It seems 0143805a565418d2a114c16b7eeba3b784176d9e wanted to not call
SfxShell::Activate from ViewShell::Activate and removed that call and added an
explicit SfxShell::BroadcastContextForActivation(true) (which is the body of
SfxShell::Activate) to OutlineViewShell::Activate for the case where it was
apparently wanted.

Then DrawViewShell::Deactivate had the call to ViewShell::Deactivate removed
persumably to avoid calling SfxShell::Deactivate via ViewShell::Deactivate

But with ViewShell::Deactivate omitted switching to master view is broken, it
does quite a lot more than call just SfxShell::Deactivate

Restore the call of ViewShell::Deactivate from DrawViewShell::Deactivate and
remove the call of SfxShell::Deactivate from ViewShell::Deactivate and put its
equivalent of SfxShell::BroadcastContextForActivation(false) into
OutlineViewShell::Deactivate to balance OutlineViewShell::Activate

regression since 0143805a565418d2a114c16b7eeba3b784176d9e

Change-Id: I5175378af6a6527a8be4d5011f13029d028b4304